fix: Removed un-thrown exceptions from javadoc